added css styles to header, footer and configured axios

--- a/src/common/colours.scss
+++ b/src/common/colours.scss
@@ -1,5 +1,5 @@
 $primary-color: #1e2129;
-$secondary-color: #1F2129;
-$accent-color: #E50914;
+$secondary-color: #1f2129;
+$accent-color: #e50914;
 $font-primary: #ffffff;
 $font-secondary: #8e95a5;
