--- a/src/common/colours.scss
+++ b/src/common/colours.scss
@@ -1,5 +1,5 @@
 $primary-color: #1e2129;
-$secondary-color: #1f2129;
+$secondary-color: #13151a;
 $accent-color: #e50914;
 $font-primary: #ffffff;
 $font-secondary: #8e95a5;
