--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,1 +1,28 @@
- 
+@import '../../common/colours.scss';
+
+.card--item {
+  background-color: $secondary-color;
+  cursor: pointer;
+}
+
+.top--card {
+  height: 300px;
+
+  img {
+      width: 100%;
+      height: 100%;
+  }
+}
+
+.info--card {
+    color: $font-primary;
+    h4 {
+        font-size: 22px;
+        font-weight: 400;
+        margin-bottom: 10px;
+    }
+}
+
+.bottom--card {
+    padding: 20px;
+}
