--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -3,26 +3,32 @@
 .card--item {
   background-color: $secondary-color;
   cursor: pointer;
+  transition: all 0.3s;
+
+  &:hover {
+    transform: scale(1.1);
+    transition: all 0.3s;
+  }
 }
 
 .top--card {
   height: 300px;
 
   img {
-      width: 100%;
-      height: 100%;
+    width: 100%;
+    height: 100%;
   }
 }
 
 .info--card {
-    color: $font-primary;
-    h4 {
-        font-size: 22px;
-        font-weight: 400;
-        margin-bottom: 10px;
-    }
+  color: $font-primary;
+  h4 {
+    font-size: 22px;
+    font-weight: 400;
+    margin-bottom: 10px;
+  }
 }
 
 .bottom--card {
-    padding: 20px;
+  padding: 20px;
 }
