--- a/src/components/Listing/Listing.scss
+++ b/src/components/Listing/Listing.scss
@@ -1,6 +1,7 @@
 @import '../../common/colours.scss';
 
-.movie--list {
+.movie--list,
+.serie--list {
   margin: 20px 0px;
   h2 {
     color: $font-secondary;
