--- a/src/App.scss
+++ b/src/App.scss
@@ -91,13 +91,14 @@ video {
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
+  color: $font-primary;
 }
 
 body {
-    background-color: $primary-color;
+  background-color: $primary-color;
 }
 
 .container {
-    margin: 0px 40px;
+  margin: 0px 40px;
 }
