--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -20,3 +20,27 @@
   padding-left: 15px;
   color: $font-primary;
 }
+
+.search--bar {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+
+  form {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    input {
+      width: 100%;
+      font-size: 18px;
+      padding: 5px 5px 5px 10px;
+      outline: none;
+    }
+    button {
+      padding: 0px 8px;
+      font-size: 20px;
+      cursor: pointer;
+      height: 38px;
+    }
+  }
+}
